--- a/src/NJournal.Web/bower.json
+++ b/src/NJournal.Web/bower.json
@@ -1,12 +1,11 @@
 {
-  "name": "ASP.NET",
+  "name": "NJournal",
   "private": true,
   "dependencies": {
-    "bootstrap": "3.0.0",
+    "bootstrap": "3.3.4",
     "jquery": "1.10.2",
     "jquery-validation": "1.11.1",
     "jquery-validation-unobtrusive": "3.2.2",
-    "hammer.js": "2.0.4",
-    "bootstrap-touch-carousel": "0.8.0"
+    "hammer.js": "2.0.4"
   }
 }
