--- a/src/NJournal.Web/package.json
+++ b/src/NJournal.Web/package.json
@@ -1,10 +1,12 @@
 {
     "name": "NJournal",
     "description": "Next-gen vNext based blogging engine",
+    "private": true,
     "repository": { "type": "github", "url": "" },
     "version": "0.0.1",
     "devDependencies": {
         "gulp": "3.8.11",
-        "rimraf": "2.2.8"
+        "rimraf": "2.2.8",
+        "bower": "1.4.1"
     }
 }
